adding content to the website

--- a/index.html
+++ b/index.html
@@ -7,9 +7,50 @@
     <title>Social Tree</title>
   </head>
   <body>
-    <div id="profile">
-      <img src="./assets/avatar.jpg" alt="Mulher negra de cabelo crespo"/>
-      <p>@instagram</p>
+    <div id="container">
+      <div id="profile">
+        <img src="./assets/avatar.jpg" alt="Mulher negra de cabelo crespo" />
+        <p>@instagram</p>
+      </div>
+
+      <ul>
+        <li>
+          <a href="#">Link 1</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Link 2</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Link 3</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Link 4</a>
+        </li>
+      </ul>
+
+      <div id="social-links">
+        <a href="https://twitter.com">
+          <img src="./assets/twitter.svg" alt="Símbolo do Twitter" />
+        </a>
+        <a href="https://twitch.com">
+          <img src="./assets/twitch.svg" alt="Símbolo do Twitter" />
+        </a>
+        <a href="https://instagram.com">
+          <img src="./assets/instagram.svg" alt="Símbolo do Instagram" />
+        </a>
+        <a href="https://linkedin.com">
+          <img src="./assets/linkedin.svg" alt="Símbolo do Linkedin" />
+        </a>
+        <a href="https://github.com">
+          <img src="./assets/github.svg" alt="Símbolo do Github" />
+        </a>
+      </div>
     </div>
   </body>
 </html>
