finished editing css

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
       </ul>
 
       <div id="social-links">
-        <a href="https://twitter.com">
+        <a href="https://twitter.com" target="_blank">
           <img src="./assets/twitter.svg" alt="Símbolo do Twitter" />
         </a>
-        <a href="https://twitch.com">
+        <a href="https://twitch.com" target="_blank">
           <img src="./assets/twitch.svg" alt="Símbolo do Twitter" />
         </a>
-        <a href="https://instagram.com">
+        <a href="https://instagram.com" target="_blank">
           <img src="./assets/instagram.svg" alt="Símbolo do Instagram" />
         </a>
-        <a href="https://linkedin.com">
+        <a href="https://linkedin.com" target="_blank">
           <img src="./assets/linkedin.svg" alt="Símbolo do Linkedin" />
         </a>
-        <a href="https://github.com">
+        <a href="https://github.com" target="_blank">
           <img src="./assets/github.svg" alt="Símbolo do Github" />
         </a>
       </div>
